--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "guzzlehttp/guzzle": "^5.3",
-        "phpmd/phpmd": "^2.2"
+        "guzzlehttp/guzzle": "^5.3"
     },
     "autoload": {
         "psr-4": {
@@ -25,6 +24,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
-        "squizlabs/php_codesniffer": "^2.3"
+        "squizlabs/php_codesniffer": "^2.3",
+        "phpmd/phpmd": "^2.2"
     }
 }
