--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,22 @@
 language: php
+
 php:
   - 5.4
   - 5.5
   - 5.6
   - 7.0
   - hhvm
+
 install:
   - composer install --dev --prefer-dist
+
+before_script:
+  - mkdir -p build/logs
+
 script:
+  - ./vendor/bin/phpunit --coverage-clover build/logs/clover.xml
   - ./vendor/bin/phpcs --standard=psr2 ./src
   - ./vendor/bin/phpmd ./src/ text ./vendor/phpmd/phpmd/src/main/resources/rulesets/cleancode.xml
+
+  after_success:
+  - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then php ./vendor/bin/coveralls -v; fi;'
