--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
     "require-dev": {
         "phpunit/phpunit": "^4.8",
         "squizlabs/php_codesniffer": "^2.3",
-        "phpmd/phpmd": "^2.2"
+        "phpmd/phpmd": "^2.2",
+        "satooshi/php-coveralls": "^0.6.1"
     }
 }
