--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,9 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0",
-        "guzzlehttp/guzzle": "^5.3"
+        "php": ">=7.0.0",
+        "guzzlehttp/guzzle": "^6.2",
+        "phpunit/phpunit": "^5.7"
     },
     "autoload": {
         "psr-4": {
@@ -23,7 +24,6 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8",
         "squizlabs/php_codesniffer": "^2.3",
         "phpmd/phpmd": "^2.2",
         "satooshi/php-coveralls": "^0.6.1"
