--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,8 @@
         }
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "^2.3",
-        "phpmd/phpmd": "^2.2",
-        "satooshi/php-coveralls": "^1.0"
+        "phpmd/phpmd": "^2.5",
+        "satooshi/php-coveralls": "^1.0",
+        "squizlabs/php_codesniffer": "^2.7"
     }
 }
